# gemini-in-chrome-enabler

./: .gitignore  LICENSE  README.md  enable_gemini.py  key_gen.py  pyproject.toml  requirements.txt
mac/: Gemini-Setup-Mac-v6.2.command
win/: Gemini-Setup-Win.bat  enable_gemini_win.py
